# algorythms

./: .gitignore  CMakeLists.txt  README.md  a.out
(2sem)_Lab#1/: 1st_variant.c  2nd_variant.c  3rd_variant.c  loop.c
(2sem)_Lab#2/: doubly_linked_list.c  linked_list.c
(2sem)_Lab#3/: directed.c  main.c  non_directed.c  v2.0.c  you_dont_wanna_see_this.c
(2sem)_Lab#4/: lab4.c
(2sem)_Lab#5/: lab5.c
(2sem)_Lab#6/: lab6.c
Lab #1.6/: lab-1-6.c  pattern.c
Lab #2.1/: lab-2-1.c
Lab#1.1/: lab-1-1-first.c  lab-1-1-second.c
Lab#1.2/: lab-1-2-first.c  lab-1-2-second.c
Lab#2-2/: test.c
Lab#2.1/: lab-2-1.c
Lab#2.2/: lab-2-2.c
