cmake_minimum_required(VERSION 3.17)
project(untitled1 C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled1 "Lab#1.2/lab-1-2-first.c" "Lab#1.2/lab-1-2-second.c" "Lab#1.6/lab-1-6.c" "Lab#1.6/pattern.c" "Lab#2.2/lab-2-2.c" "Lab#2.2/test.c" "Lab#1.1/lab-1-1-first.c" "Lab#1.1/lab-1-1-second.c" "(2sem)_Lab#1/1st_varian.c" "(2sem)_Lab#1/1st_variant.c" "(2sem)_Lab#1/1st_variant.c" "(2sem)_Lab#1/1st_variant.c")
